--- a/locales/cs.meta.json
+++ b/locales/cs.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard Asistent",
-            "description": "Poskytuje snadn\u00fd a pohodln\u00fd zp\u016fsob spr\u00e1vy filtrov\u00e1n\u00ed p\u0159\u00edmo z prohl\u00ed\u017ee\u010de"
+            "description": "Poskytuje snadný a pohodlný způsob správy filtrování přímo z prohlížeče"
         }
     }
 }
