--- a/locales/da.meta.json
+++ b/locales/da.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard Assistent",
-            "description": "S\u00f8rger for en nem og behagelig m\u00e5de til at administrere filtrering lige fra browseren"
+            "description": "Sørger for en nem og behagelig måde til at administrere filtrering lige fra browseren"
         }
     }
 }
