--- a/locales/fr.meta.json
+++ b/locales/fr.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "Assistant AdGuard ",
-            "description": "Fournit un moyen facile et pratique pour g\u00e9rer le filtrage des droit \u00e0 partir du navigateur"
+            "description": "Fournit un moyen facile et pratique pour gérer le filtrage des droit à partir du navigateur"
         }
     }
 }
