--- a/locales/no.json
+++ b/locales/no.json
@@ -2,16 +2,15 @@
     "settings_position_save": "Nettsider",
     "settings_position_save_all": "Alle nettsider",
     "settings_position_save_this": "Denne nettsiden",
-    "assistant_select_element_start": "Start",
-    "assistant_select_element_text": "Velg et element p\u00e5 siden som skal blokkeres. Oppdater siden for \u00e5 avbryte elementblokkeringsmodusen.",
+    "assistant_select_element_text": "Velg et element på siden som skal blokkeres. Oppdater siden for å avbryte elementblokkeringsmodusen.",
     "menu_filtration_status": {
-        "message": "Filtrering p\u00e5 denne nettsiden"
+        "message": "Filtrering på denne nettsiden"
     },
     "menu_do_not_filter_30_sec": {
         "message": "Ikke filtrer i 30 sekunder"
     },
     "menu_block_ad_on_site": {
-        "message": "Blokker annonse p\u00e5 denne nettsiden"
+        "message": "Blokker annonse på denne nettsiden"
     },
     "menu_report_abuse": {
         "message": "Rapporter denne nettsiden"
@@ -26,7 +25,7 @@
         "message": "Elementblokkering"
     },
     "assistant_select_element_ext": {
-        "message": "Velg et element p\u00e5 siden som skal blokkeres"
+        "message": "Velg et element på siden som skal blokkeres"
     },
     "assistant_select_element_cancel": {
         "message": "Avbryt"
@@ -38,10 +37,7 @@
         "message": "Juster elementblokkeringsregel"
     },
     "assistant_slider_explain": {
-        "message": "Flytt glidebryteren for \u00e5 endre st\u00f8rrelsen p\u00e5 rammen den nye regelen vil fungere for:"
-    },
-    "assistant_slider_min": {
-        "message": "MIN"
+        "message": "Flytt glidebryteren for å endre størrelsen på rammen den nye regelen vil fungere for:"
     },
     "assistant_slider_max": {
         "message": "MAKS"
@@ -62,7 +58,7 @@
         "message": "Velg et annet element"
     },
     "assistant_preview": {
-        "message": "Forh\u00e5ndsvisning"
+        "message": "Forhåndsvisning"
     },
     "assistant_block": {
         "message": "Blokker"
@@ -71,37 +67,37 @@
         "message": "Assistentinnstillinger"
     },
     "assistant_preview_header": {
-        "message": "Elementblokkering - forh\u00e5ndsvisning"
+        "message": "Elementblokkering - forhåndsvisning"
     },
     "assistant_preview_header_info": {
         "message": "Kontroller at elementet er blokkert som det skal"
     },
     "assistant_preview_end": {
-        "message": "Avslutt forh\u00e5ndsvisning"
+        "message": "Avslutt forhåndsvisning"
     },
     "wot_unknown_description": {
         "message": "Rykte er ikke definert"
     },
     "wot_bad_description": {
-        "message": "Denne nettsiden har et veldig d\u00e5rlig rykte\ni f\u00f8lge $1"
+        "message": "Denne nettsiden har et veldig dårlig rykte\ni følge $1"
     },
     "wot_poor_description": {
-        "message": "Denne nettsiden har et d\u00e5rlig rykte\ni f\u00f8lge $1"
+        "message": "Denne nettsiden har et dårlig rykte\ni følge $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Denne nettsiden har et d\u00e5rlig rykte\ni f\u00f8lge $1"
+        "message": "Denne nettsiden har et dårlig rykte\ni følge $1"
     },
     "wot_good_description": {
-        "message": "Denne nettsiden har et godt rykte\ni f\u00f8lge $1"
+        "message": "Denne nettsiden har et godt rykte\ni følge $1"
     },
     "wot_excellent_description": {
-        "message": "Denne nettsiden har et utmerket rykte\ni f\u00f8lge $1"
+        "message": "Denne nettsiden har et utmerket rykte\ni følge $1"
     },
     "settings_choose_size_and_position": {
-        "message": "Juster st\u00f8rrelsen og posisjonen til AdGuard-assistent"
+        "message": "Juster størrelsen og posisjonen til AdGuard-assistent"
     },
     "settings_icon_size": {
-        "message": "Ikonst\u00f8rrelse:"
+        "message": "Ikonstørrelse:"
     },
     "settings_small": {
         "message": "Liten"
@@ -113,16 +109,16 @@
         "message": "Posisjoner:"
     },
     "settings_left_top": {
-        "message": "\u00d8verst til venstre"
+        "message": "Øverst til venstre"
     },
     "settings_right_top": {
-        "message": "\u00d8verst til h\u00f8yre"
+        "message": "Øverst til høyre"
     },
     "settings_left_bottom": {
         "message": "Nederst til venstre"
     },
     "settings_right_bottom": {
-        "message": "Nederst til h\u00f8yre"
+        "message": "Nederst til høyre"
     },
     "settings_cancel": {
         "message": "Avbryt"
