--- a/locales/no.meta.json
+++ b/locales/no.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard-assistent",
-            "description": "Tilbyr en enkel og praktisk m\u00e5te \u00e5 administrere filtrering rett fra nettleseren"
+            "description": "Tilbyr en enkel og praktisk måte å administrere filtrering rett fra nettleseren"
         }
     }
 }
