--- a/locales/pl.json
+++ b/locales/pl.json
@@ -3,7 +3,7 @@
     "settings_position_save_all": "Wszystkie strony internetowe",
     "settings_position_save_this": "Ta strona internetowa",
     "assistant_select_element_start": "Rozpocznij",
-    "assistant_select_element_text": "Wybierz element na stronie do zablokowania. Od\u015bwie\u017c stron\u0119, aby anulowa\u0107 tryb blokowania elementu.",
+    "assistant_select_element_text": "Wybierz element na stronie do zablokowania. Odśwież stronę, aby anulować tryb blokowania elementu.",
     "menu_filtration_status": {
         "message": "Filtrowanie na tej stronie internetowej"
     },
@@ -11,34 +11,34 @@
         "message": "Nie filtruj przez 30 sekund"
     },
     "menu_block_ad_on_site": {
-        "message": "Zablokuj reklam\u0119 na tej stronie internetowej"
+        "message": "Zablokuj reklamę na tej stronie internetowej"
     },
     "menu_report_abuse": {
-        "message": "Raportuj stron\u0119 internetow\u0105"
+        "message": "Raportuj stronę internetową"
     },
     "menu_site_report": {
-        "message": "Raport bezpiecze\u0144stwa strony internetowej"
+        "message": "Raport bezpieczeństwa strony internetowej"
     },
     "menu_settings": {
         "message": "Ustawienia Asystenta"
     },
     "assistant_select_element": {
-        "message": "Blokowanie element\u00f3w"
+        "message": "Blokowanie elementów"
     },
     "assistant_select_element_ext": {
-        "message": "Wybierz element na stronie by zablokowa\u0107"
+        "message": "Wybierz element na stronie by zablokować"
     },
     "assistant_select_element_cancel": {
         "message": "Anuluj"
     },
     "assistant_block_element": {
-        "message": "Blokowanie element\u00f3w"
+        "message": "Blokowanie elementów"
     },
     "assistant_block_element_explain": {
-        "message": "Dostosuj regu\u0142\u0119 blokowania element\u00f3w"
+        "message": "Dostosuj regułę blokowania elementów"
     },
     "assistant_slider_explain": {
-        "message": "Przesu\u0144 suwak by zmieni\u0107 rozmiar ramki, dla kt\u00f3rej b\u0119dzie obowi\u0105zywa\u0107 nowa regu\u0142a:"
+        "message": "Przesuń suwak by zmienić rozmiar ramki, dla której będzie obowiązywać nowa reguła:"
     },
     "assistant_slider_min": {
         "message": "Minimum"
@@ -50,10 +50,10 @@
         "message": "Ustawienia zaawansowane"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "Zastosuj regu\u0142\u0119 dla wszystkich stron internetowych"
+        "message": "Zastosuj regułę dla wszystkich stron internetowych"
     },
     "assistant_block_by_reference": {
-        "message": "Blokuj u\u017cywaj\u0105c linka referencyjnego"
+        "message": "Blokuj używając linka referencyjnego"
     },
     "assistant_block_similar": {
         "message": "Blokuj podobne"
@@ -62,7 +62,7 @@
         "message": "Wybierz inny element"
     },
     "assistant_preview": {
-        "message": "Podgl\u0105d"
+        "message": "Podgląd"
     },
     "assistant_block": {
         "message": "Blokuj"
@@ -71,52 +71,52 @@
         "message": "Ustawienia Asystenta"
     },
     "assistant_preview_header": {
-        "message": "Blokowanie element\u00f3w - podgl\u0105d"
+        "message": "Blokowanie elementów - podgląd"
     },
     "assistant_preview_header_info": {
-        "message": "Upewnij si\u0119, \u017ce element jest blokowany jak zamierzono"
+        "message": "Upewnij się, że element jest blokowany jak zamierzono"
     },
     "assistant_preview_end": {
-        "message": "Zamknij podgl\u0105d"
+        "message": "Zamknij podgląd"
     },
     "wot_unknown_description": {
         "message": "Reputacja nie jest zdefiniowana"
     },
     "wot_bad_description": {
-        "message": "Ta strona internetowa ma bardzo z\u0142\u0105 reputacj\u0119 zgodnie z $1"
+        "message": "Ta strona internetowa ma bardzo złą reputację zgodnie z $1"
     },
     "wot_poor_description": {
-        "message": "Ta strona internetowa ma z\u0142\u0105 reputacj\u0119 zgodnie z $1"
+        "message": "Ta strona internetowa ma złą reputację zgodnie z $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Ta strona internetowa ma s\u0142ab\u0105 reputacj\u0119 zgodnie z $1"
+        "message": "Ta strona internetowa ma słabą reputację zgodnie z $1"
     },
     "wot_good_description": {
-        "message": "Ta strona internetowa ma dobr\u0105 reputacj\u0119 zgodnie z $1"
+        "message": "Ta strona internetowa ma dobrą reputację zgodnie z $1"
     },
     "wot_excellent_description": {
-        "message": "Ta strona internetowa ma doskona\u0142\u0105 reputacj\u0119 zgodnie z $1"
+        "message": "Ta strona internetowa ma doskonałą reputację zgodnie z $1"
     },
     "settings_choose_size_and_position": {
-        "message": "Dostosuj rozmiar i pozycj\u0119 Asystenta AdGuarda"
+        "message": "Dostosuj rozmiar i pozycję Asystenta AdGuarda"
     },
     "settings_icon_size": {
         "message": "Rozmiar ikony:"
     },
     "settings_small": {
-        "message": "Ma\u0142y"
+        "message": "Mały"
     },
     "settings_big": {
-        "message": "Du\u017cy"
+        "message": "Duży"
     },
     "settings_position": {
         "message": "Pozycja:"
     },
     "settings_left_top": {
-        "message": "Lewy g\u00f3rny"
+        "message": "Lewy górny"
     },
     "settings_right_top": {
-        "message": "Prawy g\u00f3rny"
+        "message": "Prawy górny"
     },
     "settings_left_bottom": {
         "message": "Na dole po lewej"
