--- a/locales/pl.meta.json
+++ b/locales/pl.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "Asystent AdGuarda",
-            "description": "Zapewnia \u0142atwy i wygodny spos\u00f3b na zarz\u0105dzanie filtrowaniem bezpo\u015brednio z przegl\u0105darki"
+            "description": "Zapewnia łatwy i wygodny sposób na zarządzanie filtrowaniem bezpośrednio z przeglądarki"
         }
     }
 }
