--- a/locales/sv.json
+++ b/locales/sv.json
@@ -1,9 +1,8 @@
 {
     "settings_position_save": "Webbplatser",
     "settings_position_save_all": "Alla webbplatser",
-    "settings_position_save_this": "Den h\u00e4r webbplatsen",
-    "assistant_select_element_start": "Start",
-    "assistant_select_element_text": "V\u00e4lj ett element sidan att blockera. \u00c5terladda sidan f\u00f6r att \u00e5terst\u00e4lla elementblockeringsl\u00e4get.",
+    "settings_position_save_this": "Den här webbplatsen",
+    "assistant_select_element_text": "Välj ett element sidan att blockera. Återladda sidan för att återställa elementblockeringsläget.",
     "menu_filtration_status": {
         "message": "Webbplatsens filtrering"
     },
@@ -11,22 +10,22 @@
         "message": "Pausa filtrering 30 sekunder"
     },
     "menu_block_ad_on_site": {
-        "message": "Blockera annons p\u00e5 den h\u00e4r webbplatsen"
+        "message": "Blockera annons på den här webbplatsen"
     },
     "menu_report_abuse": {
         "message": "Rapportera webbplatsen"
     },
     "menu_site_report": {
-        "message": "S\u00e4kerhetsrapport f\u00f6r webbplatsen"
+        "message": "Säkerhetsrapport för webbplatsen"
     },
     "menu_settings": {
-        "message": "Assistentinst\u00e4llningar"
+        "message": "Assistentinställningar"
     },
     "assistant_select_element": {
         "message": "Blockering av annonselement"
     },
     "assistant_select_element_ext": {
-        "message": "V\u00e4lj ett annonselement f\u00f6r blockering"
+        "message": "Välj ett annonselement för blockering"
     },
     "assistant_select_element_cancel": {
         "message": "Avbryt"
@@ -35,25 +34,19 @@
         "message": "Blockering av annonselement"
     },
     "assistant_block_element_explain": {
-        "message": "Anpassa blockeringsregeln f\u00f6r annonselementet"
+        "message": "Anpassa blockeringsregeln för annonselementet"
     },
     "assistant_slider_explain": {
-        "message": "Justera storleken p\u00e5 annonselementet som den nya blockeringsregeln skall avse:"
-    },
-    "assistant_slider_min": {
-        "message": "MIN"
-    },
-    "assistant_slider_max": {
-        "message": "MAX"
+        "message": "Justera storleken på annonselementet som den nya blockeringsregeln skall avse:"
     },
     "assistant_extended_settings": {
         "message": "Avancerade val"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "Till\u00e4mpa regelns p\u00e5 alla webbplatster"
+        "message": "Tillämpa regelns på alla webbplatster"
     },
     "assistant_block_by_reference": {
-        "message": "Blockera med referensl\u00e4nk"
+        "message": "Blockera med referenslänk"
     },
     "assistant_block_similar": {
         "message": "Blockera liknande"
@@ -62,7 +55,7 @@
         "message": "Markera ett annat annonselement"
     },
     "assistant_preview": {
-        "message": "F\u00f6rhandsgranska"
+        "message": "Förhandsgranska"
     },
     "assistant_block": {
         "message": "Blockera"
@@ -71,22 +64,22 @@
         "message": "Assistentval"
     },
     "assistant_preview_header": {
-        "message": "F\u00f6rhandsgranskning av elementblockeringen"
+        "message": "Förhandsgranskning av elementblockeringen"
     },
     "assistant_preview_header_info": {
         "message": "Kontrollera att elementet blockerats som avsett"
     },
     "assistant_preview_end": {
-        "message": "Avsluta f\u00f6rhandsgranskningen"
+        "message": "Avsluta förhandsgranskningen"
     },
     "wot_unknown_description": {
-        "message": "Den h\u00e4r sajtens anseende \u00e4r inte klarlagd av $1"
+        "message": "Den här sajtens anseende är inte klarlagd av $1"
     },
     "wot_bad_description": {
-        "message": "Webbplatsen har ett mycket d\u00e5ligt anseende\nenligt $1"
+        "message": "Webbplatsen har ett mycket dåligt anseende\nenligt $1"
     },
     "wot_poor_description": {
-        "message": "Webbplatsen har d\u00e5ligt anseende\nenligt $1"
+        "message": "Webbplatsen har dåligt anseende\nenligt $1"
     },
     "wot_unsatisfactory_description": {
         "message": "Webbplatsen har tveksamt anseende\nenligt $1"
@@ -98,7 +91,7 @@
         "message": "Webbplatsen har ett mycket gott anseende\nenligt $1"
     },
     "settings_choose_size_and_position": {
-        "message": "Anpassas storlek och l\u00e4ge f\u00f6r AdGuardassistenten"
+        "message": "Anpassas storlek och läge för AdGuardassistenten"
     },
     "settings_icon_size": {
         "message": "Ikonstorlek"
@@ -110,24 +103,24 @@
         "message": "Stor"
     },
     "settings_position": {
-        "message": "L\u00e4ge:"
+        "message": "Läge:"
     },
     "settings_left_top": {
-        "message": "Ovan v\u00e4nster"
+        "message": "Ovan vänster"
     },
     "settings_right_top": {
-        "message": "Ovan h\u00f6ger"
+        "message": "Ovan höger"
     },
     "settings_left_bottom": {
-        "message": "Nedan v\u00e4nster"
+        "message": "Nedan vänster"
     },
     "settings_right_bottom": {
-        "message": "Nedan h\u00f6ger"
+        "message": "Nedan höger"
     },
     "settings_cancel": {
         "message": "Avbryt"
     },
     "settings_save": {
-        "message": "Spara \u00e4ndringar"
+        "message": "Spara ändringar"
     }
 }
