--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -1,133 +1,133 @@
 {
-    "settings_position_save": "\u7f51\u7ad9",
-    "settings_position_save_all": "\u6240\u6709\u7f51\u7ad9",
-    "settings_position_save_this": "\u6b64\u7f51\u7ad9",
-    "assistant_select_element_start": "\u5f00\u59cb",
-    "assistant_select_element_text": "\u9009\u62e9\u8981\u62e6\u622a\u7684\u7f51\u9875\u5143\u7d20\u3002\u8981\u53d6\u6d88\u5143\u7d20\u62e6\u622a\u6a21\u5f0f\uff0c\u8bf7\u5237\u65b0\u7f51\u9875\u3002",
+    "settings_position_save": "网站",
+    "settings_position_save_all": "所有网站",
+    "settings_position_save_this": "此网站",
+    "assistant_select_element_start": "开始",
+    "assistant_select_element_text": "选择要拦截的网页元素。要取消元素拦截模式，请刷新网页。",
     "menu_filtration_status": {
-        "message": "\u5bf9\u6b64\u7f51\u7ad9\u8fdb\u884c\u8fc7\u6ee4"
+        "message": "对此网站进行过滤"
     },
     "menu_do_not_filter_30_sec": {
-        "message": "\u6682\u505c\u8fc7\u6ee4 30 \u79d2"
+        "message": "暂停过滤 30 秒"
     },
     "menu_block_ad_on_site": {
-        "message": "\u62e6\u622a\u6b64\u7f51\u7ad9\u4e0a\u7684\u5e7f\u544a"
+        "message": "拦截此网站上的广告"
     },
     "menu_report_abuse": {
-        "message": "\u62a5\u544a\u6b64\u7f51\u7ad9"
+        "message": "报告此网站"
     },
     "menu_site_report": {
-        "message": "\u7f51\u7ad9\u5b89\u5168\u62a5\u544a"
+        "message": "网站安全报告"
     },
     "menu_settings": {
-        "message": "\u52a9\u624b\u8bbe\u7f6e"
+        "message": "助手设置"
     },
     "assistant_select_element": {
-        "message": "\u62e6\u622a\u5143\u7d20"
+        "message": "拦截元素"
     },
     "assistant_select_element_ext": {
-        "message": "\u9009\u62e9\u6b64\u9875\u9762\u4e0a\u9700\u8981\u62e6\u622a\u7684\u5143\u7d20"
+        "message": "选择此页面上需要拦截的元素"
     },
     "assistant_select_element_cancel": {
-        "message": "\u53d6\u6d88"
+        "message": "取消"
     },
     "assistant_block_element": {
-        "message": "\u62e6\u622a\u5143\u7d20"
+        "message": "拦截元素"
     },
     "assistant_block_element_explain": {
-        "message": "\u8c03\u6574\u5143\u7d20\u62e6\u622a\u89c4\u5219"
+        "message": "调整元素拦截规则"
     },
     "assistant_slider_explain": {
-        "message": "\u4f7f\u7528\u6ed1\u5757\u6539\u53d8\u8981\u7531\u65b0\u89c4\u5219\u5c06\u8981\u62e6\u622a\u7684\u6846\u67b6\u5927\u5c0f\uff1a"
+        "message": "使用滑块改变要由新规则将要拦截的框架大小："
     },
     "assistant_slider_min": {
-        "message": "\u6700\u5c0f"
+        "message": "最小"
     },
     "assistant_slider_max": {
-        "message": "\u6700\u5927"
+        "message": "最大"
     },
     "assistant_extended_settings": {
-        "message": "\u9ad8\u7ea7\u8bbe\u7f6e"
+        "message": "高级设置"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "\u5e94\u7528\u89c4\u5219\u81f3\u6240\u6709\u7f51\u7ad9"
+        "message": "应用规则至所有网站"
     },
     "assistant_block_by_reference": {
-        "message": "\u901a\u8fc7\u53c2\u8003\u94fe\u63a5\u8fdb\u884c\u62e6\u622a"
+        "message": "通过参考链接进行拦截"
     },
     "assistant_block_similar": {
-        "message": "\u62e6\u622a\u7c7b\u4f3c\u5143\u7d20"
+        "message": "拦截类似元素"
     },
     "assistant_another_element": {
-        "message": "\u9009\u62e9\u5176\u5b83\u5143\u7d20"
+        "message": "选择其它元素"
     },
     "assistant_preview": {
-        "message": "\u9884\u89c8"
+        "message": "预览"
     },
     "assistant_block": {
-        "message": "\u62e6\u622a"
+        "message": "拦截"
     },
     "assistant_settings": {
-        "message": "AdGuard \u52a9\u624b\u8bbe\u7f6e"
+        "message": "AdGuard 助手设置"
     },
     "assistant_preview_header": {
-        "message": "\u5143\u7d20\u62e6\u622a - \u9884\u89c8"
+        "message": "元素拦截 - 预览"
     },
     "assistant_preview_header_info": {
-        "message": "\u8bf7\u786e\u4fdd\u5143\u7d20\u62e6\u622a\u65b9\u5f0f\u7b26\u5408\u9884\u671f"
+        "message": "请确保元素拦截方式符合预期"
     },
     "assistant_preview_end": {
-        "message": "\u9000\u51fa\u9884\u89c8"
+        "message": "退出预览"
     },
     "wot_unknown_description": {
-        "message": "\u58f0\u671b\u5c1a\u672a\u5b9a\u4e49"
+        "message": "声望尚未定义"
     },
     "wot_bad_description": {
-        "message": "\u6b64\u7f51\u7ad9\u5728\u4ee5\u4e0b\u6570\u636e\u5e93\u4e2d\u58f0\u671b\u6781\u4f4e"
+        "message": "此网站在以下数据库中声望极低"
     },
     "wot_poor_description": {
-        "message": "\u6b64\u7f51\u7ad9\u5728\u4ee5\u4e0b\u6570\u636e\u5e93\u4e2d\u58f0\u671b\u4f4e\u4e0b "
+        "message": "此网站在以下数据库中声望低下 "
     },
     "wot_unsatisfactory_description": {
-        "message": "\u6b64\u7f51\u7ad9\u5728\u4ee5\u4e0b\u6570\u636e\u5e93\u4e2d\u58f0\u671b\u4e0d\u4f73 "
+        "message": "此网站在以下数据库中声望不佳 "
     },
     "wot_good_description": {
-        "message": "\u6b64\u7f51\u7ad9\u5728\u4ee5\u4e0b\u6570\u636e\u5e93\u4e2d\u58f0\u671b\u826f\u597d "
+        "message": "此网站在以下数据库中声望良好 "
     },
     "wot_excellent_description": {
-        "message": "\u6b64\u7f51\u7ad9\u5728\u4ee5\u4e0b\u6570\u636e\u5e93\u4e2d\u58f0\u671b\u6781\u4f73 "
+        "message": "此网站在以下数据库中声望极佳 "
     },
     "settings_choose_size_and_position": {
-        "message": "\u8c03\u6574 AdGuard \u52a9\u624b\u7684\u5927\u5c0f\u4e0e\u4f4d\u7f6e"
+        "message": "调整 AdGuard 助手的大小与位置"
     },
     "settings_icon_size": {
-        "message": "\u56fe\u6807\u5927\u5c0f\uff1a"
+        "message": "图标大小："
     },
     "settings_small": {
-        "message": "\u5c0f"
+        "message": "小"
     },
     "settings_big": {
-        "message": "\u5927"
+        "message": "大"
     },
     "settings_position": {
-        "message": "\u4f4d\u7f6e\uff1a"
+        "message": "位置："
     },
     "settings_left_top": {
-        "message": "\u5de6\u4e0a\u89d2"
+        "message": "左上角"
     },
     "settings_right_top": {
-        "message": "\u53f3\u4e0a\u89d2"
+        "message": "右上角"
     },
     "settings_left_bottom": {
-        "message": "\u5de6\u4e0b\u89d2"
+        "message": "左下角"
     },
     "settings_right_bottom": {
-        "message": "\u53f3\u4e0b\u89d2"
+        "message": "右下角"
     },
     "settings_cancel": {
-        "message": "\u53d6\u6d88"
+        "message": "取消"
     },
     "settings_save": {
-        "message": "\u4fdd\u5b58\u66f4\u6539"
+        "message": "保存更改"
     }
 }
