--- a/locales/de.meta.json
+++ b/locales/de.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard-Assistent",
-            "description": "Bietet einen einfachen und n\u00fctzlichen Weg die Filterung direkt im Browser zu verwalten"
+            "description": "Bietet einen einfachen und nützlichen Weg die Filterung direkt im Browser zu verwalten"
         }
     }
 }
