--- a/locales/es.json
+++ b/locales/es.json
@@ -3,7 +3,7 @@
     "settings_position_save_all": "Todos sitios web",
     "settings_position_save_this": "Este sitio web",
     "assistant_select_element_start": "Empezar",
-    "assistant_select_element_text": "Elija un elemento en la p\u00e1gina para bloquear. Actualice la p\u00e1gina para cancelar el bloqueo de elementos.",
+    "assistant_select_element_text": "Elija un elemento en la página para bloquear. Actualice la página para cancelar el bloqueo de elementos.",
     "menu_filtration_status": {
         "message": "Filtraje en este sitio web"
     },
@@ -20,13 +20,13 @@
         "message": "Informe de seguridad del sitio web"
     },
     "menu_settings": {
-        "message": "Configuraci\u00f3n de asistente"
+        "message": "Configuración de asistente"
     },
     "assistant_select_element": {
         "message": "Bloqueo de elementos"
     },
     "assistant_select_element_ext": {
-        "message": "Elija un elemento en la p\u00e1gina para bloquear"
+        "message": "Elija un elemento en la página para bloquear"
     },
     "assistant_select_element_cancel": {
         "message": "Cancelar"
@@ -38,7 +38,7 @@
         "message": "Ajustar la regla de bloqueo del elemento"
     },
     "assistant_slider_explain": {
-        "message": "Mueva el control deslizante para cambiar el tama\u00f1o del marco para el que funcionar\u00e1 la nueva regla:"
+        "message": "Mueva el control deslizante para cambiar el tamaño del marco para el que funcionará la nueva regla:"
     },
     "assistant_slider_min": {
         "message": "Min"
@@ -68,49 +68,49 @@
         "message": "Bloquear"
     },
     "assistant_settings": {
-        "message": "Configuraci\u00f3n de asistente"
+        "message": "Configuración de asistente"
     },
     "assistant_preview_header": {
         "message": "Bloqueo de elementos - vista previa"
     },
     "assistant_preview_header_info": {
-        "message": "Aseg\u00farese de que el elemento est\u00e9 bloqueado como se deseaba"
+        "message": "Asegúrese de que el elemento esté bloqueado como se deseaba"
     },
     "assistant_preview_end": {
         "message": "Salir de vista previa"
     },
     "wot_unknown_description": {
-        "message": "La reputaci\u00f3n no est\u00e1 definida"
+        "message": "La reputación no está definida"
     },
     "wot_bad_description": {
-        "message": "Este sitio web tiene muy mala reputaci\u00f3n\nde acuerdo a $1"
+        "message": "Este sitio web tiene muy mala reputación\nde acuerdo a $1"
     },
     "wot_poor_description": {
-        "message": "Este sitio web tiene mala reputaci\u00f3n\nde acuerdo a $1"
+        "message": "Este sitio web tiene mala reputación\nde acuerdo a $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Este sitio web tiene mala reputaci\u00f3n\nde acuerdo a $1"
+        "message": "Este sitio web tiene mala reputación\nde acuerdo a $1"
     },
     "wot_good_description": {
-        "message": "Este sitio web tiene buena reputaci\u00f3n\nde acuerdo a $1"
+        "message": "Este sitio web tiene buena reputación\nde acuerdo a $1"
     },
     "wot_excellent_description": {
-        "message": "Este sitio web tiene excelente reputaci\u00f3n\nde acuerdo a $1"
+        "message": "Este sitio web tiene excelente reputación\nde acuerdo a $1"
     },
     "settings_choose_size_and_position": {
-        "message": "Ajuste el tama\u00f1o y la posici\u00f3n del Asistente de AdGuard"
+        "message": "Ajuste el tamaño y la posición del Asistente de AdGuard"
     },
     "settings_icon_size": {
-        "message": "Tama\u00f1o de \u00edcono:"
+        "message": "Tamaño de ícono:"
     },
     "settings_small": {
-        "message": "Peque\u00f1o"
+        "message": "Pequeño"
     },
     "settings_big": {
         "message": "Grande"
     },
     "settings_position": {
-        "message": "Posici\u00f3n:"
+        "message": "Posición:"
     },
     "settings_left_top": {
         "message": "Arriba a la izquierda"
