--- a/locales/es.meta.json
+++ b/locales/es.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "Asistente de Adguard",
-            "description": "Permite f\u00e1cilmente gestionar los filtros desde el navegador"
+            "description": "Permite fácilmente gestionar los filtros desde el navegador"
         }
     }
 }
