--- a/locales/fa.json
+++ b/locales/fa.json
@@ -1,133 +1,133 @@
 {
-    "settings_position_save": "\u0648\u0628\u0633\u0627\u06cc\u062a",
-    "settings_position_save_all": "\u0647\u0645\u0647 \u0648\u0628\u0633\u0627\u06cc\u062a \u0647\u0627",
-    "settings_position_save_this": "\u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a",
-    "assistant_select_element_start": "\u0634\u0631\u0648\u0639",
-    "assistant_select_element_text": "\u0639\u0646\u0635\u0631\u06cc \u062f\u0631 \u0635\u0641\u062d\u0647 \u0628\u0631\u0627\u06cc \u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0627\u0646\u062a\u062e\u0627\u0628 \u06a9\u0646\u06cc\u062f. \u0628\u0631\u0627\u06cc \u0644\u063a\u0648\u060c\u0635\u0641\u062d\u0647 \u0631\u0627 \u0631\u0641\u0631\u0634 \u06a9\u0646\u06cc\u062f.",
+    "settings_position_save": "وبسایت",
+    "settings_position_save_all": "همه وبسایت ها",
+    "settings_position_save_this": "این وبسایت",
+    "assistant_select_element_start": "شروع",
+    "assistant_select_element_text": "عنصری در صفحه برای مسدودسازی انتخاب کنید. برای لغو،صفحه را رفرش کنید.",
     "menu_filtration_status": {
-        "message": "\u0641\u06cc\u0644\u062a\u0631\u06cc\u0646\u06af \u062f\u0631 \u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a"
+        "message": "فیلترینگ در این وبسایت"
     },
     "menu_do_not_filter_30_sec": {
-        "message": "\u0628\u0647 \u0645\u062f\u062a 30 \u062b\u0627\u0646\u06cc\u0647 \u0641\u06cc\u0644\u062a\u0631 \u0646\u06a9\u0646"
+        "message": "به مدت 30 ثانیه فیلتر نکن"
     },
     "menu_block_ad_on_site": {
-        "message": "\u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u062a\u0628\u0644\u06cc\u063a \u062f\u0631 \u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a"
+        "message": "مسدودسازی تبلیغ در این وبسایت"
     },
     "menu_report_abuse": {
-        "message": "\u06af\u0632\u0627\u0631\u0634 \u0648\u0628\u0633\u0627\u06cc\u062a"
+        "message": "گزارش وبسایت"
     },
     "menu_site_report": {
-        "message": "\u06af\u0632\u0627\u0631\u0634 \u0627\u0645\u0646\u06cc\u062a\u06cc \u0648\u0628\u0633\u0627\u06cc\u062a"
+        "message": "گزارش امنیتی وبسایت"
     },
     "menu_settings": {
-        "message": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u062f\u0633\u062a\u06cc\u0627\u0631"
+        "message": "تنظیمات دستیار"
     },
     "assistant_select_element": {
-        "message": "\u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0639\u0646\u0635\u0631"
+        "message": "مسدودسازی عنصر"
     },
     "assistant_select_element_ext": {
-        "message": "\u0639\u0646\u0635\u0631\u06cc \u062f\u0631 \u0635\u0641\u062d\u0647 \u0628\u0631\u0627\u06cc \u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0627\u0646\u062a\u062e\u0627\u0628 \u06a9\u0646\u06cc\u062f"
+        "message": "عنصری در صفحه برای مسدودسازی انتخاب کنید"
     },
     "assistant_select_element_cancel": {
-        "message": "\u0644\u063a\u0648"
+        "message": "لغو"
     },
     "assistant_block_element": {
-        "message": "\u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0639\u0646\u0635\u0631"
+        "message": "مسدودسازی عنصر"
     },
     "assistant_block_element_explain": {
-        "message": "\u062a\u0646\u0638\u06cc\u0645 \u062f\u0633\u062a\u0648\u0631 \u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0639\u0646\u0635\u0631"
+        "message": "تنظیم دستور مسدودسازی عنصر"
     },
     "assistant_slider_explain": {
-        "message": "\u062c\u0627\u0628\u062c\u0627\u06cc\u06cc \u0644\u063a\u0632\u0646\u062f\u0647 \u0628\u0631\u0627\u06cc \u062a\u063a\u06cc\u06cc\u0631 \u0627\u0646\u062f\u0627\u0632\u0647 \u0641\u0631\u06cc\u0645 \u06a9\u0647 \u062f\u0633\u062a\u0648\u0631 \u062c\u062f\u06cc\u062f\u06cc \u06a9\u0627\u0631 \u062e\u0648\u0627\u0647\u062f \u06a9\u0631\u062f:"
+        "message": "جابجایی لغزنده برای تغییر اندازه فریم که دستور جدیدی کار خواهد کرد:"
     },
     "assistant_slider_min": {
-        "message": "\u062d\u062f\u0627\u0642\u0644"
+        "message": "حداقل"
     },
     "assistant_slider_max": {
-        "message": "\u062d\u062f\u0627\u06a9\u062b\u0631"
+        "message": "حداکثر"
     },
     "assistant_extended_settings": {
-        "message": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u067e\u06cc\u0634\u0631\u0641\u062a\u0647"
+        "message": "تنظیمات پیشرفته"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "\u0627\u0650\u0639\u0645\u0627\u0644 \u062f\u0633\u062a\u0648\u0631 \u062f\u0631 \u0647\u0645\u0647 \u0648\u0628\u0633\u0627\u06cc\u062a \u0647\u0627"
+        "message": "اِعمال دستور در همه وبسایت ها"
     },
     "assistant_block_by_reference": {
-        "message": "\u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0628\u0627 \u0644\u06cc\u0646\u06a9 \u0645\u0631\u062c\u0639"
+        "message": "مسدودسازی با لینک مرجع"
     },
     "assistant_block_similar": {
-        "message": "\u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0645\u0634\u0627\u0628\u0647"
+        "message": "مسدودسازی مشابه"
     },
     "assistant_another_element": {
-        "message": "\u0639\u0646\u0635\u0631 \u062f\u06cc\u06af\u0631\u06cc \u0627\u0646\u062a\u062e\u0627\u0628 \u06a9\u0646\u06cc\u062f"
+        "message": "عنصر دیگری انتخاب کنید"
     },
     "assistant_preview": {
-        "message": "\u067e\u06cc\u0634\u0646\u0645\u0627\u06cc\u0634"
+        "message": "پیشنمایش"
     },
     "assistant_block": {
-        "message": "\u0645\u0633\u062f\u0648\u062f"
+        "message": "مسدود"
     },
     "assistant_settings": {
-        "message": "\u062a\u0646\u0638\u06cc\u0645\u0627\u062a \u062f\u0633\u062a\u06cc\u0627\u0631"
+        "message": "تنظیمات دستیار"
     },
     "assistant_preview_header": {
-        "message": "\u0645\u0633\u062f\u0648\u062f\u0633\u0627\u0632\u06cc \u0639\u0646\u0635\u0631 - \u067e\u06cc\u0634\u0646\u0645\u0627\u06cc\u0634"
+        "message": "مسدودسازی عنصر - پیشنمایش"
     },
     "assistant_preview_header_info": {
-        "message": "\u0645\u0637\u0645\u0626\u0646 \u0634\u0648\u06cc\u062f \u0639\u0646\u0635\u0631 \u0628\u0647 \u0634\u06a9\u0644 \u062f\u0644\u062e\u0648\u0627\u0647 \u0645\u0633\u062f\u0648\u062f \u0634\u0648\u062f"
+        "message": "مطمئن شوید عنصر به شکل دلخواه مسدود شود"
     },
     "assistant_preview_end": {
-        "message": "\u062e\u0631\u0648\u062c \u0627\u0632 \u067e\u06cc\u0634\u0646\u0645\u0627\u06cc\u0634"
+        "message": "خروج از پیشنمایش"
     },
     "wot_unknown_description": {
-        "message": "\u0627\u0639\u062a\u0628\u0627\u0631 \u062a\u0639\u0631\u06cc\u0641 \u0646\u0634\u062f\u0647 \u0627\u0633\u062a"
+        "message": "اعتبار تعریف نشده است"
     },
     "wot_bad_description": {
-        "message": "\u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a \u0627\u0639\u062a\u0628\u0627\u0631 \u062e\u06cc\u0644\u06cc \u0628\u062f\u06cc \u062f\u0627\u0631\u062f\n\u0628\u0631 \u0637\u0628\u0642 "
+        "message": "این وبسایت اعتبار خیلی بدی دارد\nبر طبق "
     },
     "wot_poor_description": {
-        "message": "\u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a \u0627\u0639\u062a\u0628\u0627\u0631 \u0628\u062f\u06cc \u062f\u0627\u0631\u062f\n\u0628\u0631 \u0637\u0628\u0642 "
+        "message": "این وبسایت اعتبار بدی دارد\nبر طبق "
     },
     "wot_unsatisfactory_description": {
-        "message": "\u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a \u0627\u0639\u062a\u0628\u0627\u0631 \u06a9\u0645\u06cc \u062f\u0627\u0631\u062f\n\u0628\u0631 \u0637\u0628\u0642 "
+        "message": "این وبسایت اعتبار کمی دارد\nبر طبق "
     },
     "wot_good_description": {
-        "message": "\u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a \u0627\u0639\u062a\u0628\u0627\u0631 \u062e\u0648\u0628\u06cc \u062f\u0627\u0631\u062f\n\u0628\u0631 \u0637\u0628\u0642 "
+        "message": "این وبسایت اعتبار خوبی دارد\nبر طبق "
     },
     "wot_excellent_description": {
-        "message": "\u0627\u06cc\u0646 \u0648\u0628\u0633\u0627\u06cc\u062a \u0627\u0639\u062a\u0628\u0627\u0631 \u0639\u0627\u0644\u06cc \u062f\u0627\u0631\u062f\n\u0628\u0631 \u0637\u0628\u0642 "
+        "message": "این وبسایت اعتبار عالی دارد\nبر طبق "
     },
     "settings_choose_size_and_position": {
-        "message": "\u062a\u0646\u0638\u06cc\u0645 \u0627\u0646\u062f\u0627\u0632\u0647 \u0648 \u0645\u0648\u0642\u0639\u06cc\u062a \u062f\u0633\u062a\u06cc\u0627\u0631 AdGuard"
+        "message": "تنظیم اندازه و موقعیت دستیار AdGuard"
     },
     "settings_icon_size": {
-        "message": "\u0627\u0646\u062f\u0627\u0632\u0647 \u0622\u06cc\u06a9\u0648\u0646:"
+        "message": "اندازه آیکون:"
     },
     "settings_small": {
-        "message": "\u06a9\u0648\u0686\u06a9"
+        "message": "کوچک"
     },
     "settings_big": {
-        "message": "\u0628\u0632\u0631\u06af"
+        "message": "بزرگ"
     },
     "settings_position": {
-        "message": "\u0645\u0648\u0642\u0639\u06cc\u062a:"
+        "message": "موقعیت:"
     },
     "settings_left_top": {
-        "message": "\u0628\u0627\u0644\u0627 \u0633\u0645\u062a \u0686\u067e"
+        "message": "بالا سمت چپ"
     },
     "settings_right_top": {
-        "message": "\u0628\u0627\u0644\u0627 \u0633\u0645\u062a \u0631\u0627\u0633\u062a"
+        "message": "بالا سمت راست"
     },
     "settings_left_bottom": {
-        "message": "\u067e\u0627\u06cc\u06cc\u0646 \u0633\u0645\u062a \u0686\u067e"
+        "message": "پایین سمت چپ"
     },
     "settings_right_bottom": {
-        "message": "\u067e\u0627\u06cc\u06cc\u0646 \u0633\u0645\u062a \u0631\u0627\u0633\u062a"
+        "message": "پایین سمت راست"
     },
     "settings_cancel": {
-        "message": "\u0644\u063a\u0648"
+        "message": "لغو"
     },
     "settings_save": {
-        "message": "\u0630\u062e\u06cc\u0631\u0647 \u062a\u063a\u06cc\u06cc\u0631\u0627\u062a"
+        "message": "ذخیره تغییرات"
     }
 }
