--- a/locales/fa.meta.json
+++ b/locales/fa.meta.json
@@ -1,8 +1,8 @@
 {
     "extension": {
         "assistant": {
-            "name": "\u062f\u0633\u062a\u06cc\u0627\u0631 AdGuard",
-            "description": "\u0631\u0648\u0634 \u0631\u0627\u062d\u062a \u0648 \u0622\u0633\u0627\u0646 \u0628\u0631\u0627\u06cc \u0645\u062f\u06cc\u0631\u06cc\u062a \u0641\u06cc\u0644\u062a\u0631\u06cc\u0646\u06af \u0645\u0633\u062a\u06cc\u0642 \u0627\u0632 \u062f\u0627\u062e\u0644 \u0645\u0631\u0648\u0631\u06af\u0631."
+            "name": "دستیار AdGuard",
+            "description": "روش راحت و آسان برای مدیریت فیلترینگ مستیق از داخل مرورگر."
         }
     }
 }
