--- a/locales/fr.json
+++ b/locales/fr.json
@@ -2,8 +2,8 @@
     "settings_position_save": "Sites Web",
     "settings_position_save_all": "Tous les sites Web",
     "settings_position_save_this": "Ce site Web",
-    "assistant_select_element_start": "D\u00e9marrer",
-    "assistant_select_element_text": "Choisissez un \u00e9l\u00e9ment de la page \u00e0 bloquer. Pour afficher l'\u00e9l\u00e9ment de nouveau, rafra\u00eechissez la page.",
+    "assistant_select_element_start": "Démarrer",
+    "assistant_select_element_text": "Choisissez un élément de la page à bloquer. Pour afficher l'élément de nouveau, rafraîchissez la page.",
     "menu_filtration_status": {
         "message": "Filtrages sur ce site"
     },
@@ -17,28 +17,28 @@
         "message": "Signaler le site"
     },
     "menu_site_report": {
-        "message": "Rapport de s\u00e9curit\u00e9 du site"
+        "message": "Rapport de sécurité du site"
     },
     "menu_settings": {
-        "message": "R\u00e9glages de l'Assistant AdGuard"
+        "message": "Réglages de l'Assistant AdGuard"
     },
     "assistant_select_element": {
-        "message": "Blocage d'\u00e9l\u00e9ments "
+        "message": "Blocage d'éléments "
     },
     "assistant_select_element_ext": {
-        "message": "Choisir un \u00e9l\u00e9ment de la page \u00e0 bloquer "
+        "message": "Choisir un élément de la page à bloquer "
     },
     "assistant_select_element_cancel": {
         "message": "Annuler"
     },
     "assistant_block_element": {
-        "message": "Blocage d'\u00e9l\u00e9ments "
+        "message": "Blocage d'éléments "
     },
     "assistant_block_element_explain": {
-        "message": "Affiner la r\u00e8gle de blocage d'elements"
+        "message": "Affiner la règle de blocage d'elements"
     },
     "assistant_slider_explain": {
-        "message": "D\u00e9placez le curseur pour modifier la taille du cadre de travail de la nouvelle r\u00e8gle"
+        "message": "Déplacez le curseur pour modifier la taille du cadre de travail de la nouvelle règle"
     },
     "assistant_slider_min": {
         "message": "Minimum"
@@ -47,10 +47,10 @@
         "message": "Maximum"
     },
     "assistant_extended_settings": {
-        "message": "Param\u00e9trages avanc\u00e9s "
+        "message": "Paramétrages avancés "
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "Appliquer la r\u00e8gle \u00e0 tous les sites"
+        "message": "Appliquer la règle à tous les sites"
     },
     "assistant_block_by_reference": {
         "message": "Blocage par liens de reference"
@@ -59,7 +59,7 @@
         "message": "Blocage des objets similaires "
     },
     "assistant_another_element": {
-        "message": "S\u00e9lectionner un \u00e9l\u00e9ment diff\u00e9rent"
+        "message": "Sélectionner un élément différent"
     },
     "assistant_preview": {
         "message": "Previsualisation "
@@ -68,34 +68,34 @@
         "message": "Blocage "
     },
     "assistant_settings": {
-        "message": "R\u00e9glages de l'Assistant AdGuard"
+        "message": "Réglages de l'Assistant AdGuard"
     },
     "assistant_preview_header": {
-        "message": "Blocage d'\u00e9l\u00e9ments - Previsualisation "
+        "message": "Blocage d'éléments - Previsualisation "
     },
     "assistant_preview_header_info": {
-        "message": "Assurez-vous que l'\u00e9l\u00e9ment est bloqu\u00e9 comme pr\u00e9vu"
+        "message": "Assurez-vous que l'élément est bloqué comme prévu"
     },
     "assistant_preview_end": {
         "message": "Sortir de la previsualisation "
     },
     "wot_unknown_description": {
-        "message": "La d\u00e9finition de la r\u00e9putation de ce site web n'est pas d\u00e9finie par $1"
+        "message": "La définition de la réputation de ce site web n'est pas définie par $1"
     },
     "wot_bad_description": {
-        "message": "Ce site web a tr\u00e8s mauvaise r\u00e9putation selon $1"
+        "message": "Ce site web a très mauvaise réputation selon $1"
     },
     "wot_poor_description": {
-        "message": "Ce site web a mauvaise r\u00e9putation selon $1"
+        "message": "Ce site web a mauvaise réputation selon $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Ce site web a une reputation m\u00e9diocre selon $1"
+        "message": "Ce site web a une reputation médiocre selon $1"
     },
     "wot_good_description": {
-        "message": "Ce site a bonne r\u00e9putation selon $1"
+        "message": "Ce site a bonne réputation selon $1"
     },
     "wot_excellent_description": {
-        "message": "Ce site a une r\u00e9putation excellente selon $1"
+        "message": "Ce site a une réputation excellente selon $1"
     },
     "settings_choose_size_and_position": {
         "message": "Affiner la taille et la position de l'assistant AdGuard "
@@ -113,16 +113,16 @@
         "message": "Positionnement"
     },
     "settings_left_top": {
-        "message": "En haut \u00e0 gauche"
+        "message": "En haut à gauche"
     },
     "settings_right_top": {
-        "message": "En haut \u00e0 droite"
+        "message": "En haut à droite"
     },
     "settings_left_bottom": {
-        "message": "En bas \u00e0 gauche"
+        "message": "En bas à gauche"
     },
     "settings_right_bottom": {
-        "message": "En bas \u00e0 droite "
+        "message": "En bas à droite "
     },
     "settings_cancel": {
         "message": "Annuler"
