--- a/locales/he.meta.json
+++ b/locales/he.meta.json
@@ -1,8 +1,8 @@
 {
     "extension": {
         "assistant": {
-            "name": "\u05d4\u05e2\u05d5\u05d6\u05e8 \u05d4\u05d0\u05d9\u05e9\u05d9 \u05e9\u05dc \u05d0\u05d3\u05d2\u05d0\u05e8\u05d3",
-            "description": "\u05de\u05e1\u05e4\u05e7 \u05d3\u05e8\u05da \u05e7\u05dc\u05d4 \u05d5\u05e0\u05d5\u05d7\u05d4 \u05dc\u05e0\u05d4\u05dc \u05e1\u05d9\u05e0\u05d5\u05df \u05ea\u05e7\u05d9\u05df \u05d9\u05e9\u05d9\u05e8\u05d5\u05ea \u05de\u05d4\u05d3\u05e4\u05d3\u05e4\u05df"
+            "name": "העוזר האישי של אדגארד",
+            "description": "מספק דרך קלה ונוחה לנהל סינון תקין ישירות מהדפדפן"
         }
     }
 }
