--- a/locales/ja.json
+++ b/locales/ja.json
@@ -1,133 +1,133 @@
 {
-    "settings_position_save": "\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8",
-    "settings_position_save_all": "\u3059\u3079\u3066\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8",
-    "settings_position_save_this": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8",
-    "assistant_select_element_start": "\u958b\u59cb",
-    "assistant_select_element_text": "\u30d6\u30ed\u30c3\u30af\u3059\u308b\u30da\u30fc\u30b8\u4e0a\u306e\u8981\u7d20\u3092\u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044\u3002 \u30da\u30fc\u30b8\u3092\u66f4\u65b0\u3057\u8981\u7d20\u306e\u30d6\u30ed\u30c3\u30af\u30e2\u30fc\u30c9\u3092\u89e3\u9664\u3057\u307e\u3059\u3002",
+    "settings_position_save": "ウェブサイト",
+    "settings_position_save_all": "すべてのウェブサイト",
+    "settings_position_save_this": "このウェブサイト",
+    "assistant_select_element_start": "開始",
+    "assistant_select_element_text": "ブロックするページ上の要素を選択してください。 ページを更新し要素のブロックモードを解除します。",
     "menu_filtration_status": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u3092\u30d5\u30a3\u30eb\u30bf\u30ea\u30f3\u30b0"
+        "message": "このウェブサイトをフィルタリング"
     },
     "menu_do_not_filter_30_sec": {
-        "message": "30\u79d2\u9593\u30d5\u30a3\u30eb\u30bf\u30ea\u30f3\u30b0\u3092\u884c\u308f\u306a\u3044"
+        "message": "30秒間フィルタリングを行わない"
     },
     "menu_block_ad_on_site": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306e\u5e83\u544a\u3092\u30d6\u30ed\u30c3\u30af"
+        "message": "このウェブサイトの広告をブロック"
     },
     "menu_report_abuse": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u3092\u5831\u544a"
+        "message": "このウェブサイトを報告"
     },
     "menu_site_report": {
-        "message": "\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306e\u30bb\u30ad\u30e5\u30ea\u30c6\u30a3\u30ec\u30dd\u30fc\u30c8"
+        "message": "ウェブサイトのセキュリティレポート"
     },
     "menu_settings": {
-        "message": "\u30a2\u30b7\u30b9\u30bf\u30f3\u30c8\u306e\u8a2d\u5b9a"
+        "message": "アシスタントの設定"
     },
     "assistant_select_element": {
-        "message": "\u8981\u7d20\u3092\u30d6\u30ed\u30c3\u30af"
+        "message": "要素をブロック"
     },
     "assistant_select_element_ext": {
-        "message": "\u30d6\u30ed\u30c3\u30af\u3059\u308b\u8981\u7d20\u3092\u9078\u629e"
+        "message": "ブロックする要素を選択"
     },
     "assistant_select_element_cancel": {
-        "message": "\u30ad\u30e3\u30f3\u30bb\u30eb"
+        "message": "キャンセル"
     },
     "assistant_block_element": {
-        "message": "\u8981\u7d20\u3092\u30d6\u30ed\u30c3\u30af"
+        "message": "要素をブロック"
     },
     "assistant_block_element_explain": {
-        "message": "\u8981\u7d20\u306e\u30d6\u30ed\u30c3\u30af\u30eb\u30fc\u30eb\u3092\u8abf\u6574\u3059\u308b"
+        "message": "要素のブロックルールを調整する"
     },
     "assistant_slider_explain": {
-        "message": "\u30b9\u30e9\u30a4\u30c0\u30fc\u3092\u52d5\u304b\u3059\u3068\u3001\u30d6\u30ed\u30c3\u30af\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u306e\u30b5\u30a4\u30ba\u3092\u5909\u66f4\u3067\u304d\u307e\u3059:"
+        "message": "スライダーを動かすと、ブロックするフレームのサイズを変更できます:"
     },
     "assistant_slider_min": {
-        "message": "\u6700\u5c0f"
+        "message": "最小"
     },
     "assistant_slider_max": {
-        "message": "\u6700\u5927"
+        "message": "最大"
     },
     "assistant_extended_settings": {
-        "message": "\u9ad8\u5ea6\u306a\u8a2d\u5b9a"
+        "message": "高度な設定"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "\u5168\u3066\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306b\u3053\u306e\u30eb\u30fc\u30eb\u3092\u9069\u7528"
+        "message": "全てのウェブサイトにこのルールを適用"
     },
     "assistant_block_by_reference": {
-        "message": "\u53c2\u7167\u30ea\u30f3\u30af\u306b\u3088\u308b\u30d6\u30ed\u30c3\u30af"
+        "message": "参照リンクによるブロック"
     },
     "assistant_block_similar": {
-        "message": "\u985e\u4f3c\u9805\u76ee\u3092\u30d6\u30ed\u30c3\u30af"
+        "message": "類似項目をブロック"
     },
     "assistant_another_element": {
-        "message": "\u4ed6\u306e\u8981\u7d20\u3092\u9078\u629e"
+        "message": "他の要素を選択"
     },
     "assistant_preview": {
-        "message": "\u30d7\u30ec\u30d3\u30e5\u30fc"
+        "message": "プレビュー"
     },
     "assistant_block": {
-        "message": "\u30d6\u30ed\u30c3\u30af"
+        "message": "ブロック"
     },
     "assistant_settings": {
-        "message": "\u30a2\u30b7\u30b9\u30bf\u30f3\u30c8\u306e\u8a2d\u5b9a"
+        "message": "アシスタントの設定"
     },
     "assistant_preview_header": {
-        "message": "\u8981\u7d20\u306e\u30d6\u30ed\u30c3\u30af - \u30d7\u30ec\u30d3\u30e5\u30fc"
+        "message": "要素のブロック - プレビュー"
     },
     "assistant_preview_header_info": {
-        "message": "\u8981\u7d20\u304c\u610f\u56f3\u3057\u305f\u3068\u304a\u308a\u306b\u30d6\u30ed\u30c3\u30af\u3055\u308c\u3066\u3044\u308b\u3053\u3068\u3092\u78ba\u8a8d\u3057\u307e\u3059"
+        "message": "要素が意図したとおりにブロックされていることを確認します"
     },
     "assistant_preview_end": {
-        "message": "\u30d7\u30ec\u30d3\u30e5\u30fc\u3092\u7d42\u4e86"
+        "message": "プレビューを終了"
     },
     "wot_unknown_description": {
-        "message": "\u8a55\u5224\u304c\u5b9a\u7fa9\u3055\u308c\u3066\u3044\u307e\u305b\u3093"
+        "message": "評判が定義されていません"
     },
     "wot_bad_description": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306f\u975e\u5e38\u306b\u8a55\u5224\u304c\u60aa\u3044\u3067\u3059: "
+        "message": "このウェブサイトは非常に評判が悪いです: "
     },
     "wot_poor_description": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306f\u8a55\u5224\u304c\u60aa\u3044\u3067\u3059: "
+        "message": "このウェブサイトは評判が悪いです: "
     },
     "wot_unsatisfactory_description": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306f\u8a55\u5224\u304c\u3084\u3084\u60aa\u3044\u3067\u3059: "
+        "message": "このウェブサイトは評判がやや悪いです: "
     },
     "wot_good_description": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306f\u8a55\u5224\u304c\u826f\u3044\u3067\u3059: "
+        "message": "このウェブサイトは評判が良いです: "
     },
     "wot_excellent_description": {
-        "message": "\u3053\u306e\u30a6\u30a7\u30d6\u30b5\u30a4\u30c8\u306f\u3068\u3066\u3082\u8a55\u5224\u304c\u826f\u3044\u3067\u3059: "
+        "message": "このウェブサイトはとても評判が良いです: "
     },
     "settings_choose_size_and_position": {
-        "message": "AdGuard\u30a2\u30b7\u30b9\u30bf\u30f3\u30c8\u306e\u30b5\u30a4\u30ba\u3068\u4f4d\u7f6e\u3092\u8abf\u6574\u3059\u308b"
+        "message": "AdGuardアシスタントのサイズと位置を調整する"
     },
     "settings_icon_size": {
-        "message": "\u30a2\u30a4\u30b3\u30f3\u306e\u5927\u304d\u3055:"
+        "message": "アイコンの大きさ:"
     },
     "settings_small": {
-        "message": "\u5c0f"
+        "message": "小"
     },
     "settings_big": {
-        "message": "\u5927"
+        "message": "大"
     },
     "settings_position": {
-        "message": "\u4f4d\u7f6e:"
+        "message": "位置:"
     },
     "settings_left_top": {
-        "message": "\u5de6\u4e0a"
+        "message": "左上"
     },
     "settings_right_top": {
-        "message": "\u53f3\u4e0a"
+        "message": "右上"
     },
     "settings_left_bottom": {
-        "message": "\u5de6\u4e0b"
+        "message": "左下"
     },
     "settings_right_bottom": {
-        "message": "\u53f3\u4e0b"
+        "message": "右下"
     },
     "settings_cancel": {
-        "message": "\u30ad\u30e3\u30f3\u30bb\u30eb"
+        "message": "キャンセル"
     },
     "settings_save": {
-        "message": "\u8a2d\u5b9a\u3092\u4fdd\u5b58"
+        "message": "設定を保存"
     }
 }
