--- a/locales/pt-BR.meta.json
+++ b/locales/pt-BR.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "Assistente do AdGuard",
-            "description": "Fornece uma maneira f\u00e1cil e conveniente de gerenciar a filtragem diretamente do seu navegador"
+            "description": "Fornece uma maneira fácil e conveniente de gerenciar a filtragem diretamente do seu navegador"
         }
     }
 }
