--- a/locales/pt-PT.json
+++ b/locales/pt-PT.json
@@ -1,14 +1,13 @@
 {
-    "settings_position_save": "Websites",
     "settings_position_save_all": "Todos os websites",
     "settings_position_save_this": "Este website",
     "assistant_select_element_start": "Iniciar",
-    "assistant_select_element_text": "Escolha um elemento na p\u00e1gina para bloquear. Actualize a p\u00e1gina para cancelar o bloqueio do elemento.",
+    "assistant_select_element_text": "Escolha um elemento na página para bloquear. Actualize a página para cancelar o bloqueio do elemento.",
     "menu_filtration_status": {
         "message": "A filtrar este site"
     },
     "menu_do_not_filter_30_sec": {
-        "message": "N\u00e3o filtrar durante 30 segundos"
+        "message": "Não filtrar durante 30 segundos"
     },
     "menu_block_ad_on_site": {
         "message": "Bloquear publicidade neste site"
@@ -17,16 +16,16 @@
         "message": "Denunciar o site"
     },
     "menu_site_report": {
-        "message": "Relat\u00f3rio de seguran\u00e7a do site"
+        "message": "Relatório de segurança do site"
     },
     "menu_settings": {
-        "message": "Configura\u00e7\u00f5es do assistente"
+        "message": "Configurações do assistente"
     },
     "assistant_select_element": {
         "message": "Bloqueio de elemento"
     },
     "assistant_select_element_ext": {
-        "message": "Escolha um elemento na p\u00e1gina para bloquear"
+        "message": "Escolha um elemento na página para bloquear"
     },
     "assistant_select_element_cancel": {
         "message": "Cancelar"
@@ -38,22 +37,16 @@
         "message": "Ajustar a regra de bloqueio do elemento"
     },
     "assistant_slider_explain": {
-        "message": "Desloque o controlo deslizante para alterar o tamanho do quadro para o qual a nova regra ir\u00e1 funcionar:"
-    },
-    "assistant_slider_min": {
-        "message": "MIN"
-    },
-    "assistant_slider_max": {
-        "message": "MAX"
+        "message": "Desloque o controlo deslizante para alterar o tamanho do quadro para o qual a nova regra irá funcionar:"
     },
     "assistant_extended_settings": {
-        "message": "Configura\u00e7\u00f5es avan\u00e7adas"
+        "message": "Configurações avançadas"
     },
     "assistant_apply_rule_to_all_sites": {
         "message": "Aplicar a regra para todos os sites"
     },
     "assistant_block_by_reference": {
-        "message": "Bloquear por link de refer\u00eancia"
+        "message": "Bloquear por link de referência"
     },
     "assistant_block_similar": {
         "message": "Bloquear semelhante"
@@ -62,46 +55,46 @@
         "message": "Seleccionar um elemento diferente"
     },
     "assistant_preview": {
-        "message": "Previsualiza\u00e7\u00e3o"
+        "message": "Previsualização"
     },
     "assistant_block": {
         "message": "Bloquear"
     },
     "assistant_settings": {
-        "message": "Configura\u00e7\u00f5es do assistente"
+        "message": "Configurações do assistente"
     },
     "assistant_preview_header": {
         "message": "Bloquear elemento - Previsualizar"
     },
     "assistant_preview_header_info": {
-        "message": "Certifique-se de que o elemento est\u00e1 bloqueado como pretendido"
+        "message": "Certifique-se de que o elemento está bloqueado como pretendido"
     },
     "assistant_preview_end": {
-        "message": "Sair da previsualiza\u00e7\u00e3o"
+        "message": "Sair da previsualização"
     },
     "wot_unknown_description": {
-        "message": "A reputa\u00e7\u00e3o deste site n\u00e3o est\u00e1 definida por $1"
+        "message": "A reputação deste site não está definida por $1"
     },
     "wot_bad_description": {
-        "message": "Este site tem uma p\u00e9ssima reputa\u00e7\u00e3o\nde acordo com $1"
+        "message": "Este site tem uma péssima reputação\nde acordo com $1"
     },
     "wot_poor_description": {
-        "message": "Este site tem uma m\u00e1 reputa\u00e7\u00e3o\nde acordo com $1"
+        "message": "Este site tem uma má reputação\nde acordo com $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "Este site tem uma fr\u00e1gil reputa\u00e7\u00e3o\nde acordo com $1"
+        "message": "Este site tem uma frágil reputação\nde acordo com $1"
     },
     "wot_good_description": {
-        "message": "Este site tem uma boa reputa\u00e7\u00e3o\nde acordo com $1"
+        "message": "Este site tem uma boa reputação\nde acordo com $1"
     },
     "wot_excellent_description": {
-        "message": "Este site tem uma excelente reputa\u00e7\u00e3o\nde acordo com $1"
+        "message": "Este site tem uma excelente reputação\nde acordo com $1"
     },
     "settings_choose_size_and_position": {
-        "message": "Ajustar o tamanho e a posi\u00e7\u00e3o do Assistente do AdGuard"
+        "message": "Ajustar o tamanho e a posição do Assistente do AdGuard"
     },
     "settings_icon_size": {
-        "message": "Tamanho do \u00edcone:"
+        "message": "Tamanho do ícone:"
     },
     "settings_small": {
         "message": "Pequeno"
@@ -110,7 +103,7 @@
         "message": "Grande"
     },
     "settings_position": {
-        "message": "Posi\u00e7\u00e3o:"
+        "message": "Posição:"
     },
     "settings_left_top": {
         "message": "Canto superior esquerdo"
@@ -128,6 +121,6 @@
         "message": "Cancelar"
     },
     "settings_save": {
-        "message": "Guardar altera\u00e7\u00f5es"
+        "message": "Guardar alterações"
     }
 }
