--- a/locales/pt-PT.meta.json
+++ b/locales/pt-PT.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "Assistente do AdGuard",
-            "description": "Fornece uma forma f\u00e1cil e conveniente de gerir a filtragem a partir do seu navegador"
+            "description": "Fornece uma forma fácil e conveniente de gerir a filtragem a partir do seu navegador"
         }
     }
 }
