--- a/locales/ru.json
+++ b/locales/ru.json
@@ -1,133 +1,127 @@
 {
-    "settings_position_save": "\u0421\u0430\u0439\u0442\u044b",
-    "settings_position_save_all": "\u041d\u0430 \u0432\u0441\u0435\u0445",
-    "settings_position_save_this": "\u0422\u043e\u043b\u044c\u043a\u043e \u043d\u0430 \u044d\u0442\u043e\u043c",
-    "assistant_select_element_start": "\u041d\u0430\u0447\u0430\u0442\u044c",
-    "assistant_select_element_text": "\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435 \u044d\u043b\u0435\u043c\u0435\u043d\u0442 \u0434\u043b\u044f \u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f. \u041e\u0431\u043d\u043e\u0432\u0438\u0442\u0435 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0443, \u0447\u0442\u043e\u0431\u044b \u043e\u0442\u043c\u0435\u043d\u0438\u0442\u044c \u0440\u0435\u0436\u0438\u043c \u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0438 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u043e\u0432.",
+    "settings_position_save": "Сайты",
+    "settings_position_save_all": "На всех",
+    "settings_position_save_this": "Только на этом",
+    "assistant_select_element_start": "Начать",
+    "assistant_select_element_text": "Выберите на странице элемент для блокирования. Обновите страницу, чтобы отменить режим блокировки элементов.",
     "menu_filtration_status": {
-        "message": "\u0424\u0438\u043b\u044c\u0442\u0440\u0430\u0446\u0438\u044f \u043d\u0430 \u044d\u0442\u043e\u043c \u0441\u0430\u0439\u0442\u0435"
+        "message": "Фильтрация на этом сайте"
     },
     "menu_do_not_filter_30_sec": {
-        "message": "\u041d\u0435 \u0444\u0438\u043b\u044c\u0442\u0440\u043e\u0432\u0430\u0442\u044c 30 \u0441\u0435\u043a\u0443\u043d\u0434"
+        "message": "Не фильтровать 30 секунд"
     },
     "menu_block_ad_on_site": {
-        "message": "\u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0440\u0435\u043a\u043b\u0430\u043c\u0443 \u043d\u0430 \u0441\u0430\u0439\u0442\u0435"
+        "message": "Заблокировать рекламу на сайте"
     },
     "menu_report_abuse": {
-        "message": "\u041f\u043e\u0436\u0430\u043b\u043e\u0432\u0430\u0442\u044c\u0441\u044f \u043d\u0430 \u0441\u0430\u0439\u0442"
+        "message": "Пожаловаться на сайт"
     },
     "menu_site_report": {
-        "message": "\u041e\u0442\u0447\u0451\u0442 \u043e \u0431\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0441\u0442\u0438 \u0441\u0430\u0439\u0442\u0430"
+        "message": "Отчёт о безопасности сайта"
     },
     "menu_settings": {
-        "message": "\u041d\u0430\u0441\u0442\u0440\u043e\u0438\u0442\u044c \u043f\u043e\u043c\u043e\u0449\u043d\u0438\u043a"
+        "message": "Настроить помощник"
     },
     "assistant_select_element": {
-        "message": " \u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0430 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430"
+        "message": " Блокировка элемента"
     },
     "assistant_select_element_ext": {
-        "message": "\u0412\u044b\u0431\u0435\u0440\u0438\u0442\u0435 \u043d\u0430 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435 \u044d\u043b\u0435\u043c\u0435\u043d\u0442, \u043a\u043e\u0442\u043e\u0440\u044b\u0439 \u043d\u0430\u0434\u043e \u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c"
+        "message": "Выберите на странице элемент, который надо заблокировать"
     },
     "assistant_select_element_cancel": {
-        "message": "\u041e\u0442\u043c\u0435\u043d\u0430"
+        "message": "Отмена"
     },
     "assistant_block_element": {
-        "message": "\u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0430 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430"
+        "message": "Блокировка элемента"
     },
     "assistant_block_element_explain": {
-        "message": "\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u0442\u0435 \u043f\u0440\u0430\u0432\u0438\u043b\u043e \u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430"
+        "message": "Настройте правило блокирования элемента"
     },
     "assistant_slider_explain": {
-        "message": "\u041f\u0435\u0440\u0435\u043c\u0435\u0449\u0430\u0439\u0442\u0435 \u0431\u0435\u0433\u0443\u043d\u043e\u043a, \u0447\u0442\u043e\u0431\u044b \u0438\u0437\u043c\u0435\u043d\u0438\u0442\u044c \u0440\u0430\u0437\u043c\u0435\u0440 \u0431\u043b\u043e\u043a\u0430, \u0434\u043b\u044f \u043a\u043e\u0442\u043e\u0440\u043e\u0433\u043e \u0431\u0443\u0434\u0435\u0442 \u0434\u0435\u0439\u0441\u0442\u0432\u043e\u0432\u0430\u0442\u044c \u043f\u0440\u0430\u0432\u0438\u043b\u043e:"
-    },
-    "assistant_slider_min": {
-        "message": "MIN"
-    },
-    "assistant_slider_max": {
-        "message": "MAX"
+        "message": "Перемещайте бегунок, чтобы изменить размер блока, для которого будет действовать правило:"
     },
     "assistant_extended_settings": {
-        "message": "\u0420\u0430\u0441\u0448\u0438\u0440\u0435\u043d\u043d\u044b\u0435 \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438"
+        "message": "Расширенные настройки"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "\u041f\u0440\u0438\u043c\u0435\u043d\u0438\u0442\u044c \u043f\u0440\u0430\u0432\u0438\u043b\u043e \u0434\u043b\u044f \u0432\u0441\u0435\u0445 \u0441\u0430\u0439\u0442\u043e\u0432"
+        "message": "Применить правило для всех сайтов"
     },
     "assistant_block_by_reference": {
-        "message": "\u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043f\u043e \u0441\u0441\u044b\u043b\u043a\u0435"
+        "message": "Блокировать по ссылке"
     },
     "assistant_block_similar": {
-        "message": "\u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043f\u043e\u0445\u043e\u0436\u0438\u0435"
+        "message": "Блокировать похожие"
     },
     "assistant_another_element": {
-        "message": "\u0412\u044b\u0431\u0440\u0430\u0442\u044c \u0434\u0440\u0443\u0433\u043e\u0439 \u044d\u043b\u0435\u043c\u0435\u043d\u0442"
+        "message": "Выбрать другой элемент"
     },
     "assistant_preview": {
-        "message": "\u041f\u0440\u0435\u0434\u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440"
+        "message": "Предпросмотр"
     },
     "assistant_block": {
-        "message": "\u0417\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c"
+        "message": "Заблокировать"
     },
     "assistant_settings": {
-        "message": "\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0430 \u043f\u043e\u043c\u043e\u0449\u043d\u0438\u043a\u0430"
+        "message": "Настройка помощника"
     },
     "assistant_preview_header": {
-        "message": "\u0411\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u043a\u0430 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430 - \u043f\u0440\u0435\u0434\u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440"
+        "message": "Блокировка элемента - предпросмотр"
     },
     "assistant_preview_header_info": {
-        "message": "\u0423\u0431\u0435\u0434\u0438\u0442\u0435\u0441\u044c, \u0447\u0442\u043e \u044d\u043b\u0435\u043c\u0435\u043d\u0442 \u0437\u0430\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d \u043a\u0430\u043a \u0437\u0430\u0434\u0443\u043c\u0430\u043d\u043e"
+        "message": "Убедитесь, что элемент заблокирован как задумано"
     },
     "assistant_preview_end": {
-        "message": "\u0417\u0430\u043a\u043e\u043d\u0447\u0438\u0442\u044c \u043f\u0440\u0435\u0434\u043f\u0440\u043e\u0441\u043c\u043e\u0442\u0440"
+        "message": "Закончить предпросмотр"
     },
     "wot_unknown_description": {
-        "message": "\u0420\u0435\u043f\u0443\u0442\u0430\u0446\u0438\u044f \u043d\u0435 \u043e\u043f\u0440\u0435\u0434\u0435\u043b\u0435\u043d\u0430 \u0440\u0430\u0441\u0448\u0438\u0440\u0435\u043d\u0438\u0435\u043c $1"
+        "message": "Репутация не определена расширением $1"
     },
     "wot_bad_description": {
-        "message": "\u0423 \u0441\u0430\u0439\u0442\u0430 \u043e\u0447\u0435\u043d\u044c \u043f\u043b\u043e\u0445\u0430\u044f \u0440\u0435\u043f\u0443\u0442\u0430\u0446\u0438\u044f \u043f\u043e \u0434\u0430\u043d\u043d\u044b\u043c $1"
+        "message": "У сайта очень плохая репутация по данным $1"
     },
     "wot_poor_description": {
-        "message": "\u0423 \u0441\u0430\u0439\u0442\u0430 \u043f\u043b\u043e\u0445\u0430\u044f \u0440\u0435\u043f\u0443\u0442\u0430\u0446\u0438\u044f \u043f\u043e \u0434\u0430\u043d\u043d\u044b\u043c $1"
+        "message": "У сайта плохая репутация по данным $1"
     },
     "wot_unsatisfactory_description": {
-        "message": "\u0423 \u0441\u0430\u0439\u0442\u0430 \u043d\u0435\u0443\u0434\u043e\u0432\u043b\u0435\u0442\u0432\u043e\u0440\u0438\u0442\u0435\u043b\u044c\u043d\u0430\u044f \u0440\u0435\u043f\u0443\u0442\u0430\u0446\u0438\u044f \u043f\u043e \u0434\u0430\u043d\u043d\u044b\u043c $1"
+        "message": "У сайта неудовлетворительная репутация по данным $1"
     },
     "wot_good_description": {
-        "message": "\u0423 \u0441\u0430\u0439\u0442\u0430 \u0445\u043e\u0440\u043e\u0448\u0430\u044f \u0440\u0435\u043f\u0443\u0442\u0430\u0446\u0438\u044f \u043f\u043e \u0434\u0430\u043d\u043d\u044b\u043c $1"
+        "message": "У сайта хорошая репутация по данным $1"
     },
     "wot_excellent_description": {
-        "message": "\u0423 \u0441\u0430\u0439\u0442\u0430 \u043e\u0442\u043b\u0438\u0447\u043d\u0430\u044f \u0440\u0435\u0443\u0442\u0430\u0446\u0438\u044f \u043f\u043e \u0434\u0430\u043d\u043d\u044b\u043c $1"
+        "message": "У сайта отличная реутация по данным $1"
     },
     "settings_choose_size_and_position": {
-        "message": "\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u0442\u0435 \u0440\u0430\u0437\u043c\u0435\u0440 \u0438 \u043f\u043e\u043b\u043e\u0436\u0435\u043d\u0438\u0435 \u043f\u043e\u043c\u043e\u0449\u043d\u0438\u043a\u0430 AdGuard"
+        "message": "Настройте размер и положение помощника AdGuard"
     },
     "settings_icon_size": {
-        "message": "\u0420\u0430\u0437\u043c\u0435\u0440 \u0438\u043a\u043e\u043d\u043a\u0438:"
+        "message": "Размер иконки:"
     },
     "settings_small": {
-        "message": "\u041c\u0430\u043b\u0435\u043d\u044c\u043a\u0430\u044f"
+        "message": "Маленькая"
     },
     "settings_big": {
-        "message": "\u0411\u043e\u043b\u044c\u0448\u0430\u044f"
+        "message": "Большая"
     },
     "settings_position": {
-        "message": "\u0420\u0430\u0441\u043f\u043e\u043b\u043e\u0436\u0435\u043d\u0438\u0435:"
+        "message": "Расположение:"
     },
     "settings_left_top": {
-        "message": "\u0412\u0432\u0435\u0440\u0445\u0443 \u0441\u043b\u0435\u0432\u0430"
+        "message": "Вверху слева"
     },
     "settings_right_top": {
-        "message": "\u0412\u0432\u0435\u0440\u0445\u0443 \u0441\u043f\u0440\u0430\u0432\u0430"
+        "message": "Вверху справа"
     },
     "settings_left_bottom": {
-        "message": "\u0412\u043d\u0438\u0437\u0443 \u0441\u043b\u0435\u0432\u0430"
+        "message": "Внизу слева"
     },
     "settings_right_bottom": {
-        "message": "\u0412\u043d\u0438\u0437\u0443 \u0441\u043f\u0440\u0430\u0432\u0430"
+        "message": "Внизу справа"
     },
     "settings_cancel": {
-        "message": "\u041e\u0442\u043c\u0435\u043d\u0430"
+        "message": "Отмена"
     },
     "settings_save": {
-        "message": "\u0421\u043e\u0445\u0440\u0430\u043d\u0438\u0442\u044c \u043d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438"
+        "message": "Сохранить настройки"
     }
 }
