--- a/locales/ru.meta.json
+++ b/locales/ru.meta.json
@@ -1,8 +1,8 @@
 {
     "extension": {
         "assistant": {
-            "name": "\u041f\u043e\u043c\u043e\u0449\u043d\u0438\u043a AdGuard",
-            "description": "\u041f\u043e\u0437\u0432\u043e\u043b\u044f\u0435\u0442 \u043b\u0435\u0433\u043a\u043e \u0438 \u0431\u044b\u0441\u0442\u0440\u043e \u0443\u043f\u0440\u0430\u0432\u043b\u044f\u0442\u044c \u0444\u0438\u043b\u044c\u0442\u0440\u0430\u0446\u0438\u0435\u0439 \u043f\u0440\u044f\u043c\u043e \u0438\u0437 \u0431\u0440\u0430\u0443\u0437\u0435\u0440\u0430"
+            "name": "Помощник AdGuard",
+            "description": "Позволяет легко и быстро управлять фильтрацией прямо из браузера"
         }
     }
 }
