--- a/locales/sv.meta.json
+++ b/locales/sv.meta.json
@@ -2,7 +2,7 @@
     "extension": {
         "assistant": {
             "name": "AdGuard-assistent",
-            "description": "Erbjuder ett enkelt och bekv\u00e4mt s\u00e4tt att hantera filtrering direkt i webbl\u00e4saren"
+            "description": "Erbjuder ett enkelt och bekvämt sätt att hantera filtrering direkt i webbläsaren"
         }
     }
 }
