--- a/locales/tr.json
+++ b/locales/tr.json
@@ -1,9 +1,9 @@
 {
     "settings_position_save": "Siteler",
-    "settings_position_save_all": "T\u00fcm siteler",
+    "settings_position_save_all": "Tüm siteler",
     "settings_position_save_this": "Bu site",
-    "assistant_select_element_start": "Ba\u015fla",
-    "assistant_select_element_text": "Engellemek i\u00e7in sayfada bir \u00f6\u011fe se\u00e7in. \u00d6\u011fe engelleme modunu iptal etmek i\u00e7in sayfay\u0131 yenileyin.",
+    "assistant_select_element_start": "Başla",
+    "assistant_select_element_text": "Engellemek için sayfada bir öğe seçin. Öğe engelleme modunu iptal etmek için sayfayı yenileyin.",
     "menu_filtration_status": {
         "message": "Bu sitedeki filtreleme"
     },
@@ -17,117 +17,114 @@
         "message": "Bu siteyi rapor et"
     },
     "menu_site_report": {
-        "message": "Sitenin g\u00fcvenlik raporu"
+        "message": "Sitenin güvenlik raporu"
     },
     "menu_settings": {
-        "message": "Assistant ayarlar\u0131"
+        "message": "Assistant ayarları"
     },
     "assistant_select_element": {
-        "message": "\u00d6\u011fe engelleme"
+        "message": "Öğe engelleme"
     },
     "assistant_select_element_ext": {
-        "message": "Bu sitede engellemek i\u00e7in bir \u00f6\u011fe se\u00e7in"
+        "message": "Bu sitede engellemek için bir öğe seçin"
     },
     "assistant_select_element_cancel": {
-        "message": "\u0130ptal"
+        "message": "İptal"
     },
     "assistant_block_element": {
-        "message": "\u00d6\u011fe engelleme"
+        "message": "Öğe engelleme"
     },
     "assistant_block_element_explain": {
-        "message": "\u00d6\u011fe engelleme kural\u0131n\u0131 ayarla"
+        "message": "Öğe engelleme kuralını ayarla"
     },
     "assistant_slider_explain": {
-        "message": "Yeni kural\u0131n \u00e7al\u0131\u015faca\u011f\u0131 \u00e7er\u00e7evenin boyutunu de\u011fi\u015ftirmek i\u00e7in kayar d\u00fc\u011fmeyi hareket ettirin"
-    },
-    "assistant_slider_min": {
-        "message": "MIN"
+        "message": "Yeni kuralın çalışacağı çerçevenin boyutunu değiştirmek için kayar düğmeyi hareket ettirin"
     },
     "assistant_slider_max": {
         "message": "MAKS"
     },
     "assistant_extended_settings": {
-        "message": "Geli\u015fmi\u015f ayarlar"
+        "message": "Gelişmiş ayarlar"
     },
     "assistant_apply_rule_to_all_sites": {
-        "message": "T\u00fcm sitelerde bu kural\u0131 uygula"
+        "message": "Tüm sitelerde bu kuralı uygula"
     },
     "assistant_block_by_reference": {
-        "message": "Referans ba\u011flant\u0131 ile engelle"
+        "message": "Referans bağlantı ile engelle"
     },
     "assistant_block_similar": {
         "message": "Benzerlerini engelle"
     },
     "assistant_another_element": {
-        "message": "Farkl\u0131 bir \u00f6\u011fe se\u00e7"
+        "message": "Farklı bir öğe seç"
     },
     "assistant_preview": {
-        "message": "\u00d6nizleme"
+        "message": "Önizleme"
     },
     "assistant_block": {
         "message": "Engelle"
     },
     "assistant_settings": {
-        "message": "Assistant ayarlar\u0131"
+        "message": "Assistant ayarları"
     },
     "assistant_preview_header": {
-        "message": "\u00d6\u011fe engelleme - \u00f6nizleme"
+        "message": "Öğe engelleme - önizleme"
     },
     "assistant_preview_header_info": {
-        "message": "\u00d6\u011fenin istedi\u011finiz gibi engellendi\u011finden emin olun"
+        "message": "Öğenin istediğiniz gibi engellendiğinden emin olun"
     },
     "assistant_preview_end": {
-        "message": "\u00d6nizlemeden \u00e7\u0131k"
+        "message": "Önizlemeden çık"
     },
     "wot_unknown_description": {
-        "message": "Bu sitenin itibar\u0131 $1 taraf\u0131ndan hen\u00fcz belirlenmemi\u015f"
+        "message": "Bu sitenin itibarı $1 tarafından henüz belirlenmemiş"
     },
     "wot_bad_description": {
-        "message": "Bu site $1 de\u011ferlendirmesine g\u00f6re\n\u00e7ok k\u00f6t\u00fc bir itibara sahip"
+        "message": "Bu site $1 değerlendirmesine göre\nçok kötü bir itibara sahip"
     },
     "wot_poor_description": {
-        "message": "Bu site $1 de\u011ferlendirmesine g\u00f6re\nk\u00f6t\u00fc bir itibara sahip"
+        "message": "Bu site $1 değerlendirmesine göre\nkötü bir itibara sahip"
     },
     "wot_unsatisfactory_description": {
-        "message": "Bu site $1 de\u011ferlendirmesine g\u00f6re\nzay\u0131f bir itibara sahip"
+        "message": "Bu site $1 değerlendirmesine göre\nzayıf bir itibara sahip"
     },
     "wot_good_description": {
-        "message": "Bu site $1 de\u011ferlendirmesine g\u00f6re\niyi bir itibara sahip"
+        "message": "Bu site $1 değerlendirmesine göre\niyi bir itibara sahip"
     },
     "wot_excellent_description": {
-        "message": "Bu site $1 de\u011ferlendirmesine g\u00f6re\nm\u00fckemmel bir itibara sahip"
+        "message": "Bu site $1 değerlendirmesine göre\nmükemmel bir itibara sahip"
     },
     "settings_choose_size_and_position": {
-        "message": "AdGuard Assistant'\u0131n eklentisi boyut ve konumunu ayarla"
+        "message": "AdGuard Assistant'ın eklentisi boyut ve konumunu ayarla"
     },
     "settings_icon_size": {
         "message": "Simge boyutu:"
     },
     "settings_small": {
-        "message": "K\u00fc\u00e7\u00fck"
+        "message": "Küçük"
     },
     "settings_big": {
-        "message": "B\u00fcy\u00fck"
+        "message": "Büyük"
     },
     "settings_position": {
         "message": "Konum:"
     },
     "settings_left_top": {
-        "message": "Sol \u00fcst"
+        "message": "Sol üst"
     },
     "settings_right_top": {
-        "message": "Sa\u011f \u00fcst"
+        "message": "Sağ üst"
     },
     "settings_left_bottom": {
         "message": "Sol alt"
     },
     "settings_right_bottom": {
-        "message": "Sa\u011f alt"
+        "message": "Sağ alt"
     },
     "settings_cancel": {
-        "message": "\u0130ptal"
+        "message": "İptal"
     },
     "settings_save": {
-        "message": "De\u011fi\u015fiklikleri kaydet"
+        "message": "Değişiklikleri kaydet"
     }
 }
