--- a/locales/uk.meta.json
+++ b/locales/uk.meta.json
@@ -1,8 +1,8 @@
 {
     "extension": {
         "assistant": {
-            "name": "\u041f\u043e\u043c\u0456\u0447\u043d\u0438\u043a AdGuard",
-            "description": "\u0417\u0430\u0431\u0435\u0437\u043f\u0435\u0447\u0443\u0454 \u043b\u0435\u0433\u043a\u0438\u0439 \u0456 \u0437\u0440\u0443\u0447\u043d\u0438\u0439 \u0441\u043f\u043e\u0441\u0456\u0431 \u043a\u0435\u0440\u0443\u0432\u0430\u043d\u043d\u044f \u0444\u0456\u043b\u044c\u0442\u0440\u0430\u0446\u0456\u0454\u044e \u043f\u0440\u044f\u043c\u043e \u0437 \u0432\u0435\u0431-\u043f\u0435\u0440\u0435\u0433\u043b\u044f\u0434\u0430\u0447\u0430"
+            "name": "Помічник AdGuard",
+            "description": "Забезпечує легкий і зручний спосіб керування фільтрацією прямо з веб-переглядача"
         }
     }
 }
